--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="TousAntiCovid" />
+    <meta name="keywords" content="covid,gouvernement,france" />
+    <meta name="author" content="Cadot Michael" />
+    <meta name="copyright" content="Cadot Michael" />
+    <meta name="robots" content="noindex" />
+    <meta name="Subject" content="Accueil">
+    <meta name="Identifier-Url" content="studyeval1.cadot.info/index.php">
+    <meta name="Reply-To" content="webmestre@cadot.info">
+    <meta name="Category" content="medical">
+    <title>{% block title %}{% endblock %}</title>
+    {% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+
+    {% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    {% endblock %}
+</head>
+
+<body>
+    {% block header %}
+    {% endblock %}
+    {% block body %}{% endblock %}
+    {% block footer %}
+    {% endblock %}
+</body>
+
 </html>
