--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,11 +24,16 @@
 </head>
 
 <body>
-    {% block header %}
-    {% endblock %}
-    {% block body %}{% endblock %}
-    {% block footer %}
-    {% endblock %}
+    <div class="container">
+        <div class="row">
+            {% block header %}
+
+            {% endblock %}
+            {% block body %}{% endblock %}
+            {% block footer %}
+            {% endblock %}
+        </div>
+    </div>
 </body>
 
 </html>
