--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,13 +27,38 @@
     <div class="container">
         <div class="row">
             {% block header %}
+            <div class="col-12 col-lg-3">
+                <img src="{{asset('build/logo_mobile.png')}}" class="img-fluid mx-auto d-block" alt="">
+            </div>
+            <div class="col-12 col-lg-9">
+                <div class="row d-none  d-lg-block ">
+                    <nav class="nav navbar w-100 navbar-light bg-light">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Les actualitées</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Les avancées</a>
+                        </li>
+                        </ul>
+                        <li class="navbar-item  ml-auto d-none d-xl-block">
+                            <a class="nav-link text-right" href="#">Gérald Fournier</a>
+                        </li>
+                        <li class="navbar-item  ">
+                            <a class="nav-link btn btn-primary" href="#"><i class="fas fa-upload    "></i>
+                                Déconnexion</a>
+                        </li>
+                    </nav>
 
-            {% endblock %}
-            {% block body %}{% endblock %}
-            {% block footer %}
-            {% endblock %}
+                </div>
+                {% endblock %}
+                {% block body %}{% endblock %}
+                {% block footer %}
+                {% endblock %}
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
