style:capitalize and shadow

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -20,7 +20,17 @@ nav {
 
     .nav-button {
         font-size: .7rem;
+
     }
+
+    .nav-link {
+        text-transform: capitalize;
+    }
+}
+
+.shadowroot {
+    box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%),
+        0 6px 20px 0 rgb(0 0 0 / 19%) !important;
 }
 
 .footer {
@@ -48,6 +58,7 @@ nav {
         &-titre {
             font-size: .9rem;
             color: $color_gris;
+            text-transform: capitalize;
         }
     }
 }
