feat:page vaccin with word in cloud by twig extension

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
     {% endblock %}
 </head>
 {% set
-bouton={'actualités':'fa-hand-paper','avancées':'fa-spray-can','solidaires':'fa-street-view'} %}
+bouton={'vaccin':'fa-hand-paper','avancées':'fa-spray-can','solidaires':'fa-street-view'} %}
 {% set
 apropos=['Directeur général','Secrétariat','Compatbilité'] %}
 {% set
