feat: page avancees

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,7 +79,7 @@ fa-facebook','url':'facebook/1234'},'C.G.U.':{'link':'fas fa-ruler','url':'/cgu'
             {% endblock %}
             {% block body %}{% endblock %}
             {% block footer %}
-            <div class="col-12 mx-0">
+            <div class="col-12 mx-0 mt-3">
                 <div class="row footer">
                     <div class="d-none d-lg-block col-lg-4">
                         <img src="{{asset('build/logo_mobile.png')}}" alt="logo mobile"
