--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -68,3 +68,32 @@ nav {
     text-decoration: none;
 
 }
+
+blockquote {
+    background: linear-gradient(to right, #039be5 4px, transparent 4px) 0 100%,
+        linear-gradient(to left, #039be5 4px, transparent 4px) 100% 0,
+        linear-gradient(to bottom, #039be5 4px, transparent 4px) 100% 0,
+        linear-gradient(to top, #039be5 4px, transparent 4px) 0 100%;
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    background-color: $color_gris;
+
+    .paraph {
+        padding-left: 2rem;
+
+        span {
+            font-size: 2rem;
+        }
+    }
+}
+
+.bandeau {
+    font-size: calc(1vw+1rem);
+    position: absolute;
+    bottom: 2rem;
+    background-color: $color_gris;
+    color: cornflowerblue;
+    padding-left: 2rem;
+    border-bottom: $color_orange solid 2px;
+
+}
