feat: page solidaires

--- a/templates/home/avancees.html.twig
+++ b/templates/home/avancees.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-
+{% block title %}Les avancées{% endblock %}
 {% block body %}
 <div class="container">
     <div class="row">
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6 ">
-            <img src="https://picsum.photos/id/1011/600/400" class="img-fluid" alt="">
+            <img src="https://picsum.photos/id/1011/600/400" class="img-fluid" alt="femme sur un canoe sur l'eau">
             <div class="bandeau">L’âge de la personne</div>
         </div>
         <div class="col-12 ">
@@ -37,7 +37,8 @@
             </p>
         </div>
         <div class="col-12 col-md-6 ">
-            <img src="https://picsum.photos/id/1012/600/400" class="img-fluid" alt="">
+            <img src="https://picsum.photos/id/1012/600/400" class="img-fluid"
+                alt="photo d'un homme assis avec un chien dans une prairie">
             <div class="bandeau">La Haute autorité de santé recommande</div>
         </div>
         <div class="col-12 ">
