--- a/templates/home/vaccin.html.twig
+++ b/templates/home/vaccin.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}les vaccins{% endblock %}
 
 {% block body %}
 {% set sujets=['vaccination','enfants','vaccin','fabrication','contenu','OMS','qui','pourquoi'] %}
