--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,20 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+<div class="container">
+    <div class="row justify-content-around mb-5">
 
-{% endblock %}{% endblock %}
+        <div class="alert alert-warning mt-5" role="alert">
+            <strong>Je me mobilise contre la Covid 19, je suis solidaire, <a class="btn btn-warning"
+                    href="{{path('home',{'page':'solidaires'})}}" role="button">je participe</a></strong>
+
+        </div>
+        <div class="col-12">
+            <h2>Tous solidaires</h1>
+
+        </div>
+    </div>
+
+</div>
+
+{% endblock %}
