--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,10 +13,35 @@
         </div>
         <div class="col-12">
             <h2>Tous solidaires</h1>
-
+                <blockquote class="p-2">
+                    <p class="paraph"><span>C</span>'est dans ces moments difficiles, ou nous sommes en guerre contre
+                        ctte ennemie invisible que nous pouvons relever la tête et être fier d'avoir un hymne qui
+                        abreuve les sillons du sang impurs de nos ennemies. Nos ennemies sont invisibles et sont
+                        aprtout. Je suis fier de vous mes chers enfnats, de votre obéissance aveugle, de votre effort
+                        dans le travail, de votre abandon des loisirs et de la culture pour sauver nos députés,
+                        sénateurs âgés et viellissants qui trop pris par leurs procès ne peuvent se défendre contre
+                        cette ennemie commun qui nous apporte la mort.
+                        <i class="float-right mt-3">Macron le guignol 1 mai 1984</i>
+                    </p>
+                </blockquote>
         </div>
+        <div class="row">
+            <div class="col-12 col-md-6 ">
+                <img src="https://picsum.photos/id/1029/600/400" class="img-fluid" alt="vu de central park">
+                <div class="bandeau">Espérance de vie</div>
+            </div>
+            <div class="col-12">
+                <p>
+                    L’âge de la personne est le facteur de risque de développer une forme grave de Covid-19 le plus
+                    important,
+                    la Haute autorité de santé a donc recommandé de prioriser les populations cibles vaccinales en
+                    fonction
+                    de
+                    différentes classes d’âge et selon les facteurs d’exposition au virus (ex : vie en collectivité,
+                    professionnels du secteur de la santé…).</p>
+            </div>
+        </div>
+
     </div>
 
-</div>
-
-{% endblock %}
+    {% endblock %}
