style:filan touch

--- a/templates/home/avancees.html.twig
+++ b/templates/home/avancees.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <blockquote class="p-2">
+        <blockquote class="p-2 mt-2">
             <p class="paraph"><span>C</span>ette liste suit les recommandations vaccinales émises par la Haute autorité
                 de santé
                 dans ses
