--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -97,3 +97,9 @@ blockquote {
     border-bottom: $color_orange solid 2px;
 
 }
+
+body {
+    background-image: url('../public/drapeau.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
