--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,13 +16,8 @@
                 <blockquote class="p-2">
                     <p class="paraph"><span>C</span>'est dans ces moments difficiles, ou nous sommes en guerre contre
                         cette ennemie invisible que nous pouvons relever la tête et être fier d'avoir un hymne qui
-                        abreuve les sillons du sang impurs de nos ennemies. Nos ennemies sont invisibles et sont
-                        partout. Je suis fier de vous mes chers enfants, de votre obéissance aveugle, de votre effort
-                        dans le travail, de votre abandon des loisirs et de la culture pour sauver nos députés,
-                        sénateurs âgés et viellissants, et donc à risque, qui trop pris par leurs procès ne peuvent se
-                        défendre contre
-                        cette ennemie commun qui nous apporte la mort, que la vie soit éternel dans la bétise!
-                        <i class="float-right mt-3">Macron le guignol 1 mai 1984</i>
+                        abreuve les sillons du sang impurs de nos ennemies.
+                        <i class="float-right mt-3">Macron 1 mai 1984</i>
                     </p>
                 </blockquote>
         </div>
